# swiftpkg_example

./: .bazelignore  .bazelrc  .gitignore  LICENSE  MODULE.bazel  Package.resolved  Package.swift  go.mod
actions/resolve_swift_packages/: BUILD.bazel  main.go  resolve_swift_packages.py
extensions/swiftpkg_dependencies_extension/: swiftpkg_dependencies_extension.bzl
extensions/swiftpkg_extension/: swiftpkg_extension.bzl
rules/swiftpkg/: swiftpkg.bzl
rules/swiftpkg_dependency/: swiftpkg_dependency.bzl
