"""
Bazel Modules
"""

# module

module(
    name = "spm_example",
    version = "0.0.0",
)

# rules_go

bazel_dep(name = "rules_go", version = "0.42.0", repo_name = "io_bazel_rules_go")

# TODO: When a new version is cut which includes this commit, remove override.
git_override(
    module_name = "rules_go",
    commit = "4706a513acc1f6e5125b476936060ff71bfb8723",
    remote = "https://github.com/bazelbuild/rules_go",
)

# swiftpkg

swiftpkg_extension = use_extension(
    "//extensions/swiftpkg_extension:swiftpkg_extension.bzl",
    "swiftpkg_extension",
)
use_repo(
    swiftpkg_extension,
    "swiftpkg",
    "swiftpkg_devicekit",
    "swiftpkg_kingfisher",
)

# swiftpkg_dependencies_extension = use_extension(
#     "//extensions/swiftpkg_dependencies_extension:swiftpkg_dependencies_extension.bzl",
#     "swiftpkg_dependencies_extension",
# )
# swiftpkg_dependencies_extension.index()
# use_repo(
#     swiftpkg_dependencies_extension,
#     "swiftpkg_devicekit",
#     "swiftpkg_kingfisher",
# )
