"""
Bazel Modules
"""

# module

module(
    name = "spm_example",
    version = "0.0.0",
)

# swiftpkg

swiftpkg_extension = use_extension(
    "//extensions/swiftpkg_extension:swiftpkg_extension.bzl",
    "swiftpkg_extension",
)
swiftpkg_extension.from_file(
    package_swift = "//:Package.swift",
)
use_repo(
    swiftpkg_extension,
    "swiftpkg_devicekit",
    "swiftpkg_kingfisher",
)
